<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MicrovacApp</string>
    <string name="go_forwards_text">^</string>
    <string name="go_backwards_text">v</string>
    <string name="left_text">&lt;</string>
    <string name="stop_text">O</string>
    <string name="right_text">&gt;</string>
    <string name="ip_edit_text_hint">IP Address</string>
    <string name="connect_toggle_on">ON</string>
    <string name="connect_toggle_off">OFF</string>
    <string name="expression1_text">A</string>
    <string name="expression2_text">B</string>
    <string name="expression3_text">X</string>
    <string name="expression4_text">Y</string>
    <string name="gesture_driven_checkbox_text">Gesture driven</string>
    <string name="main_menu_about_text">About</string>
    <string name="copyright">© David Pérez Marinas, 2020</string>
</resources>